correctif affichage liens / Bootstrap
les liens affichés dans la couleur de la page rendaient invisibles les onglets de la page d'accueil et implémentation de la dernière version de Bootstrap

--- a/codeCYM/CSS/menu.css
+++ b/codeCYM/CSS/menu.css
@@ -13,10 +13,6 @@ body {
     font-size: 1.3em;
 }
 
-a:link {
+.liensTravaux {
     color:#95e9d5;
-}
-
-a:visited {
-    color: #95e9d5;
 }
